# SLE

./: .gitignore  CMakeLists.txt  README.md
fun/: CSR_time.cpp
fun/DENSE_vs_CSR/: CSR_time.cpp  CSR_vs_DENSE.ipynb  dense_time.cpp
fun/Gradient_methods/: compare.cpp  measure.cpp
fun/Great_comparison/: measure.cpp
fun/Simple_iterative_methods/: measure.cpp
fun/Task_2/: 0.266667_rich_lmax.txt  0.266667_rich_lmin.txt  0.266667_rich_timer.txt  0.400000_rich_lmax.txt  0.400000_rich_lmin.txt  0.400000_rich_timer.txt  1  8_cheb_lmax.txt  8_cheb_lmin.txt  8_cheb_timer.txt  cg_lmax.txt  cg_lmin.txt  cg_timer.txt  fgd_lmax.txt  fgd_lmin.txt  fgd_timer.txt  task2.cpp
src/: CMakeLists.txt  main.cpp
src/chebyshev/: chebSGS.h  chebyshev.h  max_eigenvalue.h
src/decomposition/: householder.h
src/iterative/: FGD.h  SGS.h  gauss-seidel.h  jacobi.h  richardson.h  richardson_improved.h
src/krylov/: CG.h
src/matrix/: CSR.h  dense.h  elliptic.h  vector.h
src/tridiag/: man.txt  tridiagonal.cpp  tridiagonal.h
test/: CMakeLists.txt  test_CG.cpp  test_FGD.cpp  test_SGS.cpp  test_chebSGS.cpp  test_chebyshev.cpp  test_gauss-seidel.cpp  test_jacobi.cpp  test_matrix.cpp  test_richardson.cpp  test_triadig.cpp  test_tridiag.cpp
tridiagonal/: CMakeLists.txt  tridiagonal.cpp  tridiagonal.h
